# mimic1-lib-example

./: CMakeLists.txt  README.md  main.c
